WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132093
[iOS][WK2] Fix a few mistakes affecting the initial layout and the initial unobscured rect
https://bugs.webkit.org/show_bug.cgi?id=132093
Summary
[iOS][WK2] Fix a few mistakes affecting the initial layout and the initial un...
Benjamin Poulain
Reported
2014-04-23 18:35:11 PDT
[iOS][WK2] Fix a few mistakes affecting the initial layout and the initial unobscured rect
Attachments
Patch
(18.70 KB, patch)
2014-04-23 18:49 PDT
,
Benjamin Poulain
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-04-23 18:49:43 PDT
Created
attachment 230028
[details]
Patch
Tim Horton
Comment 2
2014-04-23 18:54:37 PDT
Comment on
attachment 230028
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=230028&action=review
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:1944 > + IntSize minimumLayoutSizeInDocumentCoordinate = roundedIntSize(minimumLayoutSizeInScrollViewCoordinates);
Coordinate*s* Also do we really want 'rounded'?
Benjamin Poulain
Comment 3
2014-04-23 19:16:41 PDT
Committed
r167735
: <
http://trac.webkit.org/changeset/167735
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug