Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm
@@ -188,17 +188,17 @@ bool WebPageProxy::updateVisibleContentRects(const VisibleContentRectUpdateInfo&
     return true;
 }
 
-void WebPageProxy::dynamicViewportSizeUpdate(const IntSize& minimumLayoutSize, const FloatRect& targetExposedContentRect, const FloatRect& targetUnobscuredRect, double targetScale)
+void WebPageProxy::dynamicViewportSizeUpdate(const FloatSize& minimumLayoutSize, const FloatRect& targetExposedContentRect, const FloatRect& targetUnobscuredRect, double targetScale)
 {
     m_process->send(Messages::WebPage::DynamicViewportSizeUpdate(minimumLayoutSize, targetExposedContentRect, targetUnobscuredRect, targetScale), m_pageID);
 }
 
-void WebPageProxy::setViewportConfigurationMinimumLayoutSize(const WebCore::IntSize& size)
+void WebPageProxy::setViewportConfigurationMinimumLayoutSize(const WebCore::FloatSize& size)
 {
     m_process->send(Messages::WebPage::SetViewportConfigurationMinimumLayoutSize(size), m_pageID);
 }
 
-void WebPageProxy::setMinimumLayoutSizeForMinimalUI(const WebCore::IntSize& size)
+void WebPageProxy::setMinimumLayoutSizeForMinimalUI(const WebCore::FloatSize& size)
 {
     m_process->send(Messages::WebPage::SetMinimumLayoutSizeForMinimalUI(size), m_pageID);
 }
